[gd_scene load_steps=12 format=3 uid="uid://cwbaftqw4douj"]

[ext_resource type="Script" path="res://main.gd" id="1_1fgt2"]
[ext_resource type="PackedScene" uid="uid://da0bv4fo1txis" path="res://player.tscn" id="1_camyh"]
[ext_resource type="PackedScene" uid="uid://c3pcpus8muwei" path="res://mob.tscn" id="2_don2i"]
[ext_resource type="FontFile" uid="uid://27stgjp34cub" path="res://fonts/Montserrat-Medium.ttf" id="4_hle12"]
[ext_resource type="Script" path="res://score_label.gd" id="5_lkgnt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vdfrg"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_g2xis"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pxgiv"]
albedo_color = Color(1, 0, 0.501961, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_qafk3"]
material = SubResource("StandardMaterial3D_pxgiv")

[sub_resource type="Curve3D" id="Curve3D_xva88"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.966, 0, -14.0906, 0, 0, 0, 0, 0, 0, -13.0437, 0, 14.9588, 0, 0, 0, 0, 0, 0, 12.8988, 0, 14.9588, 0, 0, 0, 0, 0, 0, 12.9765, 0, -14.013, 0, 0, 0, 0, 0, 0, -12.966, 0, -14.0906),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_vxi5j"]
default_font = ExtResource("4_hle12")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_1fgt2")
mob_scene = ExtResource("2_don2i")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_vdfrg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_g2xis")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, -0.12941, 0.224144, 2.10734e-08, 0.866026, 0.5, -0.258819, -0.482963, 0.836516, 0, 19, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_camyh")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_qafk3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_qafk3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_qafk3")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_qafk3")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_xva88")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999996, 0, 0.00267473, 0, 1, 0, -0.00267473, 0, -0.999996, -12.966, 0, -14.0906)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vxi5j")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 52.0
offset_top = 44.0
offset_right = 113.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Score: 0"
script = ExtResource("5_lkgnt")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="Title" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -14.0
offset_right = 109.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to retry."

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
